# visual-retriever

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml  init.sql
docs/: system-design.md  system-diagram.drawio
notebooks/: .gitignore  export_model.ipynb
src/: config.py  main.py  security_api.py
src/apis/: __init__.py
src/apis/resource/: router.py
src/apis/retrieval/: model.py  router.py
src/services/: __init__.py  db.py  emb_store.py  embedding_extraction.py  keyword_extraction.py  kv_store.py  obj_store.py
src/services/db/: db.py  model.py
